# medchain-ai

./: .gitignore  Dockerfile  README_MONITORING.md  pyproject.toml  requirements.txt  run_advanced_monitoring.py
.github/workflows/: ci.yml
ai_model/: __init__.py  pretrained_medical_ai.py
monitoring/: model_monitor.py
monitoring/alerts/: alert_config.json  alert_system.py
monitoring/dashboards/: performance_dashboard.py
monitoring/data/: dashboard.html
test_suite/: advanced_test_suite.py
tests/: test_basic.py
